<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addBtn"
        android:icon="@drawable/ic_add"
        android:title="@string/menuOption3"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/selectOptions">
        <item
            android:id="@+id/selectAll"
            android:icon="@drawable/ic_select_all"
            android:title="@string/menuOption5"
            android:visible="false"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/deleteSelected"
            android:icon="@drawable/ic_delete"
            android:title="@string/menuOption4"
            android:visible="false"
            app:showAsAction="ifRoom" />
    </group>
</menu>